# keycrypt

./: .env.example  .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
.github/workflows/: deploy.yml
daily/: __init__.py  admin.py  apps.py  forms.py  models.py  scheduler.py  urls.py  views.py
daily/migrations/: 0001_initial.py  0002_alter_dailychallenge_daily_date.py  0003_alter_dailychallenge_daily_date.py  0004_alter_dailychallenge_theme.py
daily/templates/: admin_create_daily.html  daily_leaderboard.html  list_previous_daily_puzzles.html  no_daily_challenge.html  solve_daily_puzzle.html  solve_previous_daily_puzzle.html  view_daily_solution.html
keycrypt/: asgi.py  settings.py  urls.py  wsgi.py
puzzle/: admin.py  forms.py  models.py  services.py  urls.py  views.py
puzzle/migrations/: 0001_initial.py  0006_puzzlereport.py  (+6 more)
static/: admin_create_daily.css  base.css  base.js  change_password.css  create_puzzle.css  daily_leaderboard.css  home.css  home.js  list_previous_daily_puzzles.css  list_previous_daily_puzzles.js  login.css  no_daily_challeng.css  no_daily_challenge.css  solve_daily_puzzle.css  solve_daily_puzzle.js  solve_puzzle.css  solve_puzzle.js  user_profile.css  user_profile.js  user_puzzles.css  view_daily_solution.css  view_daily_solution.js  view_puzzle.css  view_puzzle.js
templates/: base.html  create_puzzle.html  home.html  login.html  no_daily_challenge.html  register.html  solve_puzzle.html  user_profile.html  user_puzzles.html  view_puzzle.html
users/: admin.py  forms.py  models.py  send_email.py  urls.py  views.py
(+11 files in other folders)
