[project]
name = "keycrypt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "cryptography>=44.0.2",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
